--- a/spectrogram.html
+++ b/spectrogram.html
@@ -8,18 +8,17 @@
 </style>
 <script src="http://d3js.org/d3.v3.js"></script>
 <script>
-var svg;
 var nChans = 8;
 var gridSize = 1;
 var gridPad = 0;
 var borderPad = 1;
 var chanPad = 10;
-var nSamples = 20;
+var nSamples = 50;
 var passFilter = d3.range(5,55);
 var tick;
-
 var eegData;
 var nested;
+var color;
 
 //randomized data for testing
 var embedded = [];
@@ -32,98 +31,77 @@ for (var i = 0; i<lembed*nChans; i++) {
 		embedded[i].push(Math.random()*aembed*aembed);
 	}
 }
-
-svg = d3.select("body").append("svg");
 var color = d3.scale.linear()
 			.domain([0, 10, 100])
 			.range(["white", "red", "gray"])
 			.clamp(true)
-		;
-		
-function callback(i,f){try{d3.json(i,f);}catch(e){f(null,embedded);}}
+;
+color = d3.scale.linear()
+			.domain([0,5,10, 100])
+			.range(["blue","green","yellow","red"])
+			.clamp(true)
+;
+var thisColor;
+var canvas = document.createElement("canvas");
+document.body.appendChild(canvas);
+var context = canvas.getContext("2d");
+var test;
+//this means if we don't find the data file we use the random noise above instead
+//function callback(d,f){try{d3.csv(d,f);}catch(e){f(null,embedded);}}
+function callback(d,f){try{d3.text(d,f);}catch(e){f(null,embedded);}}
 callback("alpha_fft.csv",function(error, data) {
-	function update(wdata) {
+	if (typeof(data)=="string") {
+		data = d3.csv.parseRows(data);
+	}
+	//it seems like we ought to run some kinds of data processing before the update function
+	nObs = Math.floor(data.length/nChans);
+	nBands = d3.entries(data[0]).length;
+	useBands = passFilter.length;
+	for (var i = 0; i < data.length; i++) {
+		data[i]["row"] = i;
+		data[i]["channel"] = i%nChans;
+		data[i]["obs"] = Math.floor(i/nChans);
+	}
+	nested = d3.nest()
+		.key(function (d) {return d.channel;})
+		.key(function (d) {return d.obs;})
+		.entries(data)
+	;
+	canvas.width = nSamples*(gridPad+gridSize)+2*borderPad;
+	canvas.height = nChans*chanPad + 2*borderPad + nChans*passFilter.length*(gridPad+gridSize);
+	/*for(var chan = 0; chan < nChans; chan++) {
+		context.rect(	borderPad,
+									borderPad + chan*(chanPad+passFilter.length*(gridPad+gridSize)),
+									nSamples*(gridPad+gridSize),
+									passFilter.length*(gridPad+gridSize)
+		);
+	}
+	context.lineWidth = 0.5;
+	context.strokeStyle = "black";
+	context.stroke();
+	context.lineWidth = 0;*/
+	function update() {
 		tick+=1;
-		eegData = wdata;
-		nObs = Math.floor(eegData.length/nChans);
-		nBands = d3.entries(eegData[0]).length;
-		useBands = passFilter.length;
-		
-		for (var i = 0; i < eegData.length; i++) {
-			eegData[i]["row"] = i;
-			eegData[i]["channel"] = i%nChans;
-			eegData[i]["obs"] = Math.floor(i/nChans);
+		for (var chan = 0; chan < nChans; chan++) {
+			for (var samp = 0; samp < nSamples; samp++) {
+				for (var band = 0; band < passFilter.length; band++) {
+					thisColor = color(nested[chan].values[samp+tick].values[0][band]);
+					context.fillStyle = thisColor;
+					context.fillRect(	samp*(gridPad+gridSize) + borderPad,
+														chan*(chanPad + (gridSize+gridPad)*passFilter.length) + (band+passFilter[0])*(gridSize+gridPad) + borderPad,
+														gridSize,gridSize);
+				}
+			}
 		}
-		nested = d3.nest()
-			.key(function (d) {return d.channel;})
-			.key(function (d) {return d.obs;})
-			.entries(eegData)
-		;
-		//console.log(JSON.stringify(nested[0].values[0].values[0]));
-		
-		svg.attr("width",nObs*(gridPad+gridSize)+2*borderPad)
-			.attr("height",nChans*(chanPad+borderPad) + nChans*nBands*(gridPad+gridSize))
-		;
-		
-		//one cell per channel, with an svg:g element
-		var cells = svg.selectAll("g")
-			.data(nested)
-		;
-		cells.enter()
-		  .append("g")
-		  	.attr("transform", function(d,i) {return "translate(0,"+i*(borderPad+chanPad+useBands*(gridPad+gridSize))+")";})
-		  .append("rect")
-			.attr("width",borderPad+nSamples*(gridPad+gridSize))
-			.attr("height",borderPad+useBands*(gridPad+gridSize))
-			.style("stroke","black")
-			.style("fill","none")
-		;
-			
-		
-		//one column per sample, with an svg:g element
-		var columns = cells.selectAll("g")
-			.data(function(channel) {return channel.values;})
-		;
-		columns.enter()
-			.append("g")
-			.attr("transform", function(d,i) {return "translate("+i*(gridPad+gridSize)+",0)";})
-		;
-		//one square per band, with an svg:rect element
-		var squares = columns.selectAll("rect")
-			.data(function(obs) {console.log(obs); var bands = passFilter.map(function (i) {return obs.values[0][String(i)];}); return bands;})
-		;
-		squares.enter()
-		  .append("rect")
-				.attr("x", 0)
-				.attr("y", function(d,i) {return i*(gridPad + gridSize);})
-				.attr("width",gridSize)
-				.attr("height",gridSize)
-				.attr("rx",gridSize/5)
-				.attr("ry",gridSize/5)
-				.style("stroke","none")
-		;
-		
-		squares.style("fill", function(d) {return color(d);})
-		;
-		columns.exit().remove();
-		squares.exit().remove();
 		if ((tick+nSamples)*nChans>=data.length) {
 			clearInterval(loop);
 		}
 	}
-	
-	tick = 0;
-	var loop = setInterval(function() {
-		console.log(tick);
-		update(
-			data.filter(function(d,i) {
-				return (i>=(tick*nChans)) && (i<((tick+nSamples)*nChans));
-			}
-		)
-	);
-	}, 1250);
-});
 
+	tick = 0;
+	update();
+	var loop = setInterval(function() {update();}, 250);
+});
 </script>
 </body>
 </html>
